# procedurally

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
Graphics CGE/: GL.cpp  GL.h  GLTypes.h  LoadModel.cpp  Material.h  MathGL.cpp  MathGL.h  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
cmake/: extras.cmake
common/: CMakeLists.txt  Debug.cpp  FastNoise.cpp  GameTime.cpp  Hash.cpp  IOUtil.cpp  Locator.cpp  ResourceManager.cpp  Resources.cpp  ResourcesOld.cpp  StringUtils.cpp  Vec.cpp  Watch.cpp  cmdKeys.cpp
common/Resources/: ResourceManager.h  ResourceManagerOld.h  resourceLoader.h  resourceTypes.h
common/include/: Array2D.h  Common.h  DesignPatterns.h  FileWatcher.h  Grid.h  Hash.h  Header.h  IOUtil.h  NTree.h  Preprocessor.h  StaticStr.h  StringUtils.h  StrongTypes.h  Templates.h  Units.h  Util.h  Vec.h  Vec.inc  Watch.h  static_string.hpp
common/include/Systems/: Inputs.h
common/include/Systems/Locator/: Locator.h  cmdKeys.h  cmdNode.inc
core/: CMakeLists.txt  Camera.cpp  Graphics.cpp  Inputs.cpp  Locator.cpp  Precompiled.cpp  ResourceManager.cpp  Resources.cpp  Shader.cpp  Time.cpp  Time.h  Watch.cpp  cmdKeys.cpp  framework.h  main.cpp
core/Systems/: Inputs.h  Locator.h  Locator.inc  Resources.h  cmdKeys.h  cmdKeys.inc  cmdNode.h  cmdNode.inc
core/include/common/: Constexpr.h  Debug.h  Grid.h  Hash.h  NTree.h  Preprocessor.h  Serialization.h  StringUtils.h  Vec.h  Vec.inc
core/include/common/Resources/: ResourceManager.h  resource.h  resourceMonitor.h
core/include/common/Systems/: Inputs.h
core/include/common/Systems/Locator/: Locator.h  cmdKeys.h
core/include/graphics/: Camera.h  GL.h  GPUGrid.h  Graphics.h  Material.h  MathGL.h  Precompiled.h  Shader.h  Texture.h
core/include/math/: MathExt.h  MathHelpers.h
graphics/: CMakeLists.txt  Camera.cpp  Debug.cpp  GL.cpp  Graphics.cpp  LoadModel.cpp  MathGL.cpp  Mesh.cpp  Precompiled.cpp  Shader.cpp  Texture.cpp
graphics/include/: Camera.h  Debug.h  GL.h  GLTypes.h  GPUGrid.h  Graphics.h  Material.h  MathGL.cpp  MathGL.h  Mesh.h  Pool.h  Precompiled.h  Shader.h  Texture.h  stb_image.h
graphics/old/: Shader.h
io/: CMakeLists.txt  IOPath.cpp
io/include/: IOPath.h
math/: CMakeLists.txt  Mat.cpp  MathExt.cpp  pch.cpp
math/include/: Bezier.h  Mat.h  Mat.inc  MathExt.h
resources/: Debug.frag  HPBaseLevel.comp  HPExpansion.comp  HPReduction.comp  LightObj.frag  Line.frag  Line.vert  Min3D.vert  Noise.comp  NoiseSTR.comp  PassThrough.vert  ScreenPos.vert  Solid.frag  Tex.frag  TexRamp.frag  Texture.vert
src/: CMakeLists.txt  Camera.cpp  Debug.cpp  FastNoise.cpp  GL.cpp  GameTime.cpp  Graphics.cpp  Hash.cpp  Inputs.cpp  LoadModel.cpp  Locator.cpp  MathGL.cpp  Mesh.cpp  Precompiled.cpp  ResourcesOld.cpp  Shader.cpp  StringUtils.cpp  Texture.cpp  Watch.cpp  main.cpp  resource.h
src/include/common/: GameTime.h  Hash.h  Templates.h  Util.h  Vec.h  Vec.inc  Watch.h
src/include/common/Resources/: ResourceManager.h  resourceTypes.h
src/include/common/Systems/: Inputs.h
src/include/common/Systems/Locator/: Locator.h  Locator.inc  cmdNode.h  cmdNode.inc
src/include/graphics/: Camera.h  GL.h  GPUGrid.h  Graphics.h  MathGL.h  Mesh.h  Mesh.inc  Pool.h  Precompiled.h  Shader.h  Texture.h
src/include/math/: Bezier.h  Mat.h  Mat.inc  MathExt.h
tests/: CMakeLists.txt  CommonTests.cpp  MathTests.cpp  Tests.cpp  Tests.h
tools/: copy_includes.bat  generate_project.bat
unit_tests/: CMakeLists.txt  CommonTests.cpp  GraphicsTests.cpp  MathTests.cpp  Tests.cpp  Tests.h  catch.hpp
